<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.fiap.a29scjdenisapp.ManuImovelActivity"
    tools:showIn="@layout/activity_manu_imovel"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="16dp"
    android:focusableInTouchMode="true">

    <ScrollView

        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/frm_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/etTipoImovelManu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tipoImovel"
                    android:layout_marginBottom="10dp"
                    android:singleLine="true"
                    android:enabled="false"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/etLocalizacaoImovelManu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/localizacaoImovel"
                    android:layout_marginBottom="10dp"
                    android:singleLine="true"
                    android:enabled="false"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/etTamanhoImovelManu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tamanho"
                    android:layout_marginBottom="10dp"
                    android:singleLine="true"
                    android:enabled="false"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/etAnoImovelManu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ano"
                    android:layout_marginBottom="10dp"
                    android:singleLine="true"
                    android:enabled="false"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/etValorImovelManu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/valor"
                    android:layout_marginBottom="10dp"
                    android:enabled="false"/>
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spQuartosImovelManu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/quarto"
                android:prompt="@string/quartos" />

            <Spinner
                android:id="@+id/spBanheirosImovelManu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/banheiro"
                android:prompt="@string/banheiros" />

            <Button
                android:id="@+id/btSalvarImovelManu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btSalvarImovel"
                android:onClick="salvarImovel"
                android:visibility="gone"/>

            <!-- Progresso no Login -->
            <ProgressBar
                android:id="@+id/progressConf"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>